5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4445/executions/1649_1053.log
== SUBMITION (2019-04-16 17:50:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=input("nome do patrono")
if(p =="cervo"):
	msg="cervo eh patrono do Harry Potter"
else:
	 msg=p + " ""nao eh patrono do Harry Potter"
		print(msg)
-- EXECUTION TIME:
0.158352
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 9
    print(msg)
             ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:51:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=input("nome do patrono")
if(p =="cervo"):
	msg="cervo eh patrono do Harry Potter"
else:
	msg=p + " ""nao eh patrono do Harry Potter"
		print(msg)
-- ERROR:
File "XXXX", line 9
    print(msg)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:51:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=input("nome do patrono")
if(p =="cervo"):
	msg="cervo eh patrono do Harry Potter"
else:
	msg=p + " ""nao eh patrono do Harry Potter"
		print(msg)
-- EXECUTION TIME:
0.184995
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 9
    print(msg)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:51:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=input("nome do patrono:")
if(p =="cervo"):
	msg="cervo eh patrono do Harry Potter"
else:
	msg=p + " ""nao eh patrono do Harry Potter"
		print(msg)
-- EXECUTION TIME:
0.161061
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 9
    print(msg)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:52:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=input("nome do patrono:")
if(p == "cervo"):
	msg="cervo eh patrono do Harry Potter"
else:
	msg=p + " " "nao eh patrono do Harry Potter"
print(msg)
-- EXECUTION TIME:
0.195721
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nome do patrono:cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome do patrono:bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:52:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=input("nome do patrono:")
if(p == "cervo"):
	msg="cervo eh patrono do Harry Potter"
else:
	msg=p + " " "nao eh patrono do Harry Potter"
   print(msg)
-- EXECUTION TIME:
0.158303
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 9
    print(msg)
             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:52:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=input("nome do patrono:")
if(p == "cervo"):
	msg="cervo eh patrono do Harry Potter"
else:
	msg=p + " " "nao eh patrono do Harry Potter"
   print(msg)
-- EXECUTION TIME:
0.143123
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 9
    print(msg)
             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:52:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=input("nome do patrono:")
if(p == "cervo"):
	msg="cervo eh patrono do Harry Potter"
else:
	msg=p + " " "nao eh patrono do Harry Potter"
   print(msg)
-- EXECUTION TIME:
0.143786
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 9
    print(msg)
             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
